fix scrolling, fix layout issues

--- a/src/Components/ChatTextBox/styles.scss
+++ b/src/Components/ChatTextBox/styles.scss
@@ -1,6 +1,5 @@
 .post-form-wrapper {
     width: inherit;
-    position: fixed;
     bottom: 32px;
     border-top: 1px solid #eee;
     background: #f8f8f8;
