--- a/src/Containers/styles.scss
+++ b/src/Containers/styles.scss
@@ -50,7 +50,7 @@
   animation: fadein 1s;
 }
 
-.scrolling {
+.conversation-body {
   overflow-y: scroll;
   overflow-x: hidden;
   height: 100%;
@@ -64,12 +64,12 @@
       -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
   }
 }
-.widget-header {
+.header {
+  flex-shrink: 0;
   width: 100%;
   height: 40px;
   background-color: #eeeff0;
   margin: 0;
-  position: relative;
   display: flex;
   align-items: center;
   border-collapse: separate;
@@ -108,20 +108,19 @@
 }
 
 .footer {
+  flex-shrink: 0;
   width: inherit;
-  height: 32px;
-  bottom: 0px;
   display: flex;
-  position: fixed;
+  flex-direction: column;
   justify-content: center;
   .footer-message {
     width: 100%;
     background-color: #fbfcfe;
-    padding: 8px 0px 8px 0px;
-    text-align:center;
+    align-items: center;
+    display: flex;
+    justify-content: center;
   }
   .powered-by {
-    padding-top:12px;
     font-family: Rubik;
     font-size: 13px;
     font-weight: normal;
